# mwa_hyperbeam

./: .dockerignore  .gitignore  7800.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  beam2016implementation.cpp  beam2016implementation.h  build.rs  liblegendre.rlib  pyproject.toml  rocgdbinit  rocmtest.sh  test.sh
.github/workflows/: build.sh  coverage.yml  docker.yml  docker_test.yml  releases-readme.md  releases.yaml  releases.yml  run-examples.yml  run-tests.yaml  run-tests.yml
benches/: bench.rs
comparisons/: README.md  everybeam_example.py  hyperbeam_example.py  mwa_pb_example.py  pyuvdata_example.py  run.sh
comparisons/everybeam/: Makefile  everybeam_example.cpp
comparisons/hyperbeam/: Cargo.toml
cpp/: uvector.h
cpp/aocommon/: uvector_11.h
cpp/src/: beam2016implementation.cpp  beam2016implementation.h  factorialtable.h  recursive_lock.h  system.h  test.cpp  test.sh
examples/: analytic.c  analytic.py  analytic.rs  analytic_cuda.rs  analytic_cuda_device.cu  analytic_gpu.c  analytic_gpu.py  analytic_hip.rs  analytic_parallel.c  beam_calcs.c  beam_calcs.py  beam_calcs.rs  beam_calcs_cuda.c  beam_calcs_cuda.py  beam_calcs_cuda.rs  beam_calcs_cuda_device.cu  beam_calcs_many.c  beam_calcs_many_omp.c  fee.c  fee.py  fee.rs  fee_cuda.c  fee_cuda.py  fee_cuda.rs  fee_cuda_device.cu  fee_get_freqs.c  fee_gpu.c  fee_gpu.py  fee_hip.rs  fee_parallel.c  fee_parallel_omp.c  get_freqs.c  gpu_destroyer.rs  read.rs
examples/rust/: Cargo.toml
src/: beam.rs  constants.rs  cuda.rs  direction.rs  erfa.rs  errors.rs  factorial.rs  fee.rs  ffi.rs  gpu.rs  jones_test.rs  legendre.rs  lib.rs  math.rs  read_hdf5.rs  types.rs  update_rust_bindings.sh
src/analytic/: error.rs  mod.rs  tests.rs
src/analytic/ffi/: mod.rs  tests.rs
src/analytic/gpu/: analytic.cu  analytic.h  double.rs  mod.rs  single.rs  tests.rs
src/fee/: error.rs  mod.rs  tests.rs  types.rs
src/fee/cuda/: README.md  double.rs  fee.cu  fee.h  fee_jones_cuda.cu  fee_jones_cuda.cuh  mod.rs  single.rs  tests.rs
src/fee/ffi/: mod.rs  tests.rs
src/fee/gpu/: LICENSE  README.md  double.rs  fee.h  mod.rs  single.rs  tests.rs
src/gpu_common/: gpu_common.cuh
src/python/: analytic.rs  fee.rs  mod.rs
