[package]
name = "mwa_hyperbeam"
version = "0.4.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
           "Jack L. B. Line <jack.line@curtin.edu.au>",
           "Marcin Sokolowski <marcin.sokolowski@curtin.edu.au>"]
edition = "2021"
rust-version = "1.56"
license = "MPL-2.0"
readme = "README.md"
description = "Primary beam code for the Murchison Widefield Array (MWA) radio telescope."
repository = "https://github.com/MWATelescope/mwa_hyperbeam"
homepage = "https://github.com/MWATelescope/mwa_hyperbeam"
exclude = [".github/*"]

# Make a rust library, as well as static and C-compatible dynamic libraries
# available as "libmwa_hyperbeam.a" and "libmwa_hyperbeam.so".
[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
hdf5-static = ["hdf5-sys"]
erfa-static = ["marlu/erfa-static"]
cuda-static = ["marlu/cuda-static"]
all-static = ["hdf5-static", "erfa-static", "cuda-static"]
python = ["pyo3", "numpy"]

# Provide beam functionality with CUDA, double precision.
cuda = ["marlu/cuda", "cc"]
# Opt-out of double precision, use only single precision.
cuda-single = ["cuda"]

# Example-only dependencies
examples = ["anyhow", "clap"]

[profile.release]
lto = true
codegen-units = 1   # Set this to 1 in Cargo.toml to allow for maximum size reduction optimizations

[dependencies]
cfg-if = "1.0.*"
hdf5 = "0.8.*"
marlu = { version = "0.3.*", default-features = false }
parking_lot = "0.11.*"
thiserror = "1.0.*"

hdf5-sys = { version = "0.8.*", features = ["static", "threadsafe"], optional = true }

pyo3 = { version = "0.15.*", features = ["extension-module"], optional = true }
numpy = { version = "0.15.*", optional = true }

# Example-only dependencies.
anyhow = { version = "1.0.*", optional = true }
clap = { version = "3.0.*", features = ["derive"], optional = true }

[dev-dependencies]
approx = { version = "0.5.*", features = ["num-complex"] }
criterion = "0.3.*"
serial_test = "0.5.*"

ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }

[build-dependencies]
cbindgen = "0.*"

cc = { version = "1.0.*", features = ["parallel"], optional = true }

[package.metadata.docs.rs]
features = ["hdf5-static"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.maturin]
requires-dist = ["numpy"]
requires-python = ">=3.6"
project-url = { homepage = "https://github.com/MWATelescope/mwa_hyperbeam" }

[[bench]]
name = "bench"
harness = false

[[example]]
name = "beam_calcs"
required-features = ["examples"]

[[example]]
name = "beam_calcs_cuda"
required-features = ["examples", "cuda"]
